<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.travello.ui.main.fragment.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/city_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/speech_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/state_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tap_to_speak" />

        <ImageButton
            android:id="@+id/mic_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/mic_icon"
            android:src="@drawable/ic_mic" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="20dp"
            android:text="@string/search"
            android:textSize="20sp" />

    </LinearLayout>
</layout>
